testing/Travis/testcases/Parsing/shouldFail/Issue1189.adl
CONTEXT Issue1189

RELATION r[A * B] DEFAULT TGT EVALPHP "Ordina" SRC VALUE 10, 20

ENDCONTEXT

-- This should fail, because 10 should match the TType of A